<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewSignUp"
    android:background="@drawable/black"
    >

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-4dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="#FFEBEB"
        android:textSize="42sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="157dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="157dp"

        android:src="@drawable/cdgi"
        android:contentDescription="@string/signupimage" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginHorizontal="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="33dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_background4"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="17dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginHorizontal="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_background4"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:padding="17dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />

    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginHorizontal="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:drawablePadding="20dp"
        android:drawableLeft="@drawable/baseline_local_phone_24"
        android:background="@drawable/edittext_background4"
        android:hint="Mobile Number"
        android:inputType="number"
        android:maxLength="10"
        android:padding="17dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
      />

    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobile_number"
        android:layout_marginHorizontal="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_background4"
        android:drawableStart="@drawable/ic_baseline_date_range_24"
        android:drawablePadding="20dp"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:padding="17dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:focusable="false"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dob"
        android:layout_marginHorizontal="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edittext_background4"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="20dp"
        android:hint="Password"
        android:inputType="numberPassword"
        android:padding="17dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password">

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="13dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:text="SIGN UP AS USER"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_Or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="2dp"
            android:layout_toStartOf="@+id/create_account_button_for_driver"
            android:layout_toEndOf="@+id/create_account_button"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="|"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/create_account_button_for_driver"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="135dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="6dp"
            android:backgroundTint="#FF6F40"
            android:text="SIGN UP AS DRIVER"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:textStyle="bold" />
    </RelativeLayout>


</RelativeLayout>
